force-app/main/default/objects/Opportunity/fields/CAF_Analyst__c.field-meta.xml
<CustomField>
    <fullName>CAF_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Production Analyst on the Deal</description>
    <label>Production Analyst</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Analyst</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Analyst Term Operations Hybrid</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Origination Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Analyst Bridge Operations Hybrid</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals_Analyst</relationshipName>
    <type>Lookup</type>
</CustomField>