force-app/main/default/objects/Opportunity/fields/CAF_Upfront_Fee__c.field-meta.xml
<CustomField>
    <fullName>CAF_Upfront_Fee__c</fullName>
    <description>Term and Bridge Use</description>
    <label>Origination Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>