force-app/main/default/objects/Opportunity/fields/CAF_YSP__c.field-meta.xml
<CustomField>
    <fullName>CAF_YSP__c</fullName>
    <description>Term Use</description>
    <label>CAF YSP</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term_Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0 BPS in Spread</fullName>
            </value>
            <value>
                <fullName>+5 BPS in Spread / +25 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>-5 BPS in Spread / -25 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>+10 BPS in Spread / +25 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>-10 BPS in Spread / -25 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>+10 BPS in spread / +50 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>-10 BPS in spread / -50 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>+15 BPS in Spread / +50 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>-15 BPS in Spread / -50 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>+20 BPS in Spread / +50 BPS in Commissionable Fee</fullName>
            </value>
            <value>
                <fullName>-20 BPS in Spread / -50 BPS in Commissionable Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>