force-app/main/default/objects/Opportunity/fields/Calculated_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Origination_Fee__c</fullName>
    <formula>IF(OR(Record_Type_Name__c = &apos;Single_Asset_Bridge_Loan&apos;, Record_Type_Name__c = &apos;LOC_Loan&apos;),  LOC_Commitment__c * CAF_Upfront_Fee__c,
Origination_Fee__c
)</formula>
    <inlineHelpText>This is the calculated Origination Fee</inlineHelpText>
    <label>Origination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>