force-app/main/default/objects/Opportunity/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <label>Cash Management</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Term_Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>