force-app/main/default/objects/Opportunity/fields/CEMA__c.field-meta.xml
<CustomField>
    <fullName>CEMA__c</fullName>
    <inlineHelpText>Indicate whether this deal&apos;s portfolio includes CEMA loan(s). Only properties in New York may have CEMA loans.</inlineHelpText>
    <label>CEMA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>