force-app/main/default/objects/Opportunity/fields/CloseDateQuarter__c.field-meta.xml
<CustomField>
    <fullName>CloseDateQuarter__c</fullName>
    <description>Close Date Quarter</description>
    <formula>CASE(
MONTH( CloseDate ),
1, &quot;Q1&quot;,
2, &quot;Q1&quot;,
3, &quot;Q1&quot;,
4, &quot;Q2&quot;,
5, &quot;Q2&quot;,
6, &quot;Q2&quot;,
7, &quot;Q3&quot;,
8, &quot;Q3&quot;,
9, &quot;Q3&quot;,
10, &quot;Q4&quot;,
11, &quot;Q4&quot;,
&quot;Q4&quot;
)</formula>
    <inlineHelpText>Close Date Quarter</inlineHelpText>
    <label>Close Date Quarter</label>
    <type>Text</type>
</CustomField>