force-app/main/default/objects/Opportunity/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Closer on this Deal</description>
    <label>Closer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.For_Lookup_Filters__c</field>
            <operation>contains</operation>
            <value>Bridge Closer</value>
        </filterItems>
        <filterItems>
            <field>User.For_Lookup_Filters__c</field>
            <operation>contains</operation>
            <value>Term Closer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deals (Closer)</relationshipLabel>
    <relationshipName>Deals2</relationshipName>
    <type>Lookup</type>
</CustomField>