force-app/main/default/objects/Opportunity/fields/Closing_LTV__c.field-meta.xml
<CustomField>
    <fullName>Closing_LTV__c</fullName>
    <description>Final LTV % based on the Model.</description>
    <inlineHelpText>Final LTV % based on the Model.</inlineHelpText>
    <label>Closing LTV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>