force-app/main/default/objects/Opportunity/fields/Co_Originator__c.field-meta.xml
<CustomField>
    <fullName>Co_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Co-Originator on the Deal</description>
    <label>Co-Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals6</relationshipName>
    <type>Lookup</type>
</CustomField>