force-app/main/default/objects/Opportunity/fields/Commission_Detail__c.field-meta.xml
<CustomField>
    <fullName>Commission_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Detail</label>
    <referenceTo>Commission_Detail__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>