force-app/main/default/objects/Opportunity/fields/Commission_Type_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type_Approval_Status__c</fullName>
    <label>Commission Type Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>