force-app/main/default/objects/Opportunity/fields/Commission_Type_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates with the Commission Type on this Deal has been overridden</description>
    <inlineHelpText>Indicates with the Commission Type on this Deal has been overridden</inlineHelpText>
    <label>Commission Type Overridden</label>
    <type>Checkbox</type>
</CustomField>