force-app/main/default/objects/Opportunity/fields/Compensating_Factors__c.field-meta.xml
<CustomField>
    <fullName>Compensating_Factors__c</fullName>
    <label>Compensating Factors</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>