force-app/main/default/objects/Opportunity/fields/Constrained_By__c.field-meta.xml
<CustomField>
    <fullName>Constrained_By__c</fullName>
    <formula>IF(
   AND(
     NOT(ISBLANK( LTV__c ) ),
     NOT(ISBLANK( LTC__c ) )
   ), 
     IF (LTV__c &gt; LTC__c, &apos;LTV&apos;, &apos;LTC&apos;),
     &apos;&apos;
)</formula>
    <label>Constrained By</label>
    <type>Text</type>
</CustomField>