force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals (Primary Contact)</relationshipLabel>
    <relationshipName>Deals_As_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>