force-app/main/default/objects/Opportunity/fields/Cost_Basis_Per_Property__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_Per_Property__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Total_Cost_Basis__c)),
    NOT(ISBLANK(Total_Properties__c))
  ),
  Total_Cost_Basis__c/Total_Properties__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis Per Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>