force-app/main/default/objects/Opportunity/fields/Credit_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAB Use</description>
    <inlineHelpText>The Credit Check has been completed</inlineHelpText>
    <label>Credit Check Completed</label>
    <type>Checkbox</type>
</CustomField>