force-app/main/default/objects/Opportunity/fields/Credit_Check_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Completed_Date__c</fullName>
    <description>SAB Use</description>
    <label>Credit Check Completed Date</label>
    <type>Date</type>
</CustomField>