force-app/main/default/objects/Opportunity/fields/Credit_Loss_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Loss_Adjustment__c</fullName>
    <defaultValue>IF($RecordType.Name == &apos;Term Loan&apos;, 1/100, NULL )</defaultValue>
    <description>Term Use</description>
    <inlineHelpText>Calculated against Underwritten Rent</inlineHelpText>
    <label>Credit Loss Adjustment</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>