force-app/main/default/objects/Opportunity/fields/Current_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Process__c</fullName>
    <description>This is the Approval Process that this Deal is currently in</description>
    <inlineHelpText>This is the Approval Process that this Deal is currently in</inlineHelpText>
    <label>Current Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Approval</fullName>
            </value>
            <value>
                <fullName>Pricing Review - Capital Markets</fullName>
            </value>
            <value>
                <fullName>Pricing Review - Underwriting</fullName>
            </value>
            <value>
                <fullName>Entry Into UW Approval</fullName>
            </value>
            <value>
                <fullName>Confirmation of Terms - Originations</fullName>
            </value>
            <value>
                <fullName>Confirmation of Terms - Underwriting</fullName>
            </value>
            <value>
                <fullName>Confirmation of Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>