force-app/main/default/objects/Opportunity/fields/Current_Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Line_Maturity_Date__c</fullName>
    <description>Bridge Use
Previously: ADDMONTHS(Loan_Effective_Date__c, LOC_Term_Number__c)</description>
    <formula>IF(ISBLANK( Updated_Loan_Maturity_Date__c ),
 Original_Line_Maturity_Date__c,
Updated_Loan_Maturity_Date__c
)</formula>
    <label>Current Loan Maturity date</label>
    <type>Date</type>
</CustomField>