force-app/main/default/objects/Opportunity/fields/Current_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Amount__c</fullName>
    <label>Current Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>