force-app/main/default/objects/Opportunity/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <description>Current Stage for the Deal</description>
    <formula>text(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage</label>
    <type>Text</type>
</CustomField>