force-app/main/default/objects/Opportunity/fields/Current_Svc_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Svc_Interest_Rate__c</fullName>
    <description>Current Servicer Interest Rate</description>
    <label>Current Interest Rate Servicer</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>