force-app/main/default/objects/Opportunity/fields/Current_UPB__c.field-meta.xml
<CustomField>
    <fullName>Current_UPB__c</fullName>
    <description>Data comes from Servicer</description>
    <label>Current UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>