force-app/main/default/objects/Opportunity/fields/Current_UPB_Interest_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Current_UPB_Interest_Reserves__c</fullName>
    <formula>IF(Current_UPB__c &gt; 0, Current_UPB__c + Total_Interest_Reserves_Payments__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current UPB + Interest Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>