force-app/main/default/objects/Opportunity/fields/Custodial_File_Sent_to_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodial_File_Sent_to_Custodian__c</fullName>
    <description>Used by Bridge Post Closing</description>
    <label>Custodial File Sent to Custodian</label>
    <type>Date</type>
</CustomField>