force-app/main/default/objects/Opportunity/fields/Date_Change_From_Loan_Processing_to_UW__c.field-meta.xml
<CustomField>
    <fullName>Date_Change_From_Loan_Processing_to_UW__c</fullName>
    <label>Processing to UW Date</label>
    <type>Date</type>
</CustomField>