force-app/main/default/objects/Opportunity/fields/Date_Closing_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Closing_Docs_Received__c</fullName>
    <label>Date Closing Docs Received</label>
    <type>Date</type>
</CustomField>