force-app/main/default/objects/Opportunity/fields/Date_of_Entity_Search__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Entity_Search__c</fullName>
    <label>Date of Entity Search</label>
    <type>Date</type>
</CustomField>