force-app/main/default/objects/Opportunity/fields/Date_of_Individual_Search__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Individual_Search__c</fullName>
    <label>Date of Individual Search</label>
    <type>Date</type>
</CustomField>