force-app/main/default/objects/Opportunity/fields/Date_Stage_Changed_To_UW__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_Changed_To_UW__c</fullName>
    <description>This is the date that the Deal stage was updated to Underwriting or Loan Processing</description>
    <inlineHelpText>This is the date that the Deal stage was updated to Underwriting or Loan Processing</inlineHelpText>
    <label>Date Approved into UW/LP</label>
    <type>Date</type>
</CustomField>