force-app/main/default/objects/Opportunity/fields/Date_Stage_Changed_To_UW_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Stage_Changed_To_UW_Hold__c</fullName>
    <description>Date that the Stage was last changed to either UW Hold or Processing Hold. Field label was previously &quot;Date Stage Changed to UW Hold.&quot;</description>
    <inlineHelpText>Date that the Stage was last changed to either UW Hold or Processing Hold</inlineHelpText>
    <label>Date Stage Last Changed To Hold Stage</label>
    <type>Date</type>
</CustomField>