force-app/main/default/objects/Opportunity/fields/Days_Between_UW_Apprvl_and_Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_UW_Apprvl_and_Kickoff_Date__c</fullName>
    <description>The amount of days between when the Deal was approved into UW and the Kickoff Date</description>
    <formula>Kickoff_Date__c - Date_Stage_Changed_To_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of days between when the Deal was approved into UW and the Kickoff Date</inlineHelpText>
    <label>Days Between UW Apprvl and Kickoff Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>