force-app/main/default/objects/Opportunity/fields/Days_Between_UW_Subm_and_UW_Approval__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_UW_Subm_and_UW_Approval__c</fullName>
    <description>The amount of days between submission into UW and the date approved into UW</description>
    <formula>Date_Stage_Changed_To_UW__c - Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of days between submission into UW and the date approved into UW</inlineHelpText>
    <label>Days Between UW Subm and UW Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>