force-app/main/default/objects/Opportunity/fields/Days_From_Creation_to_UW_Submission__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Creation_to_UW_Submission__c</fullName>
    <formula>Submission_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of days between Create Date and Submission into Underwriting</inlineHelpText>
    <label>Days From Creation to UW Submission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>