force-app/main/default/objects/Opportunity/fields/Days_in_Approved_By_Committee__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Approved_By_Committee__c</fullName>
    <description>Subtracts IC Approval Date from today if opportunity is not closed. Subtracts IC Approval Date from Close Date if opportunity is closed</description>
    <formula>IF( IsClosed, CloseDate- IC_Approval_Date__c, TODAY() - IC_Approval_Date__c  )</formula>
    <label>Days in Approved By Committee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>