force-app/main/default/objects/Opportunity/fields/Days_in_Processing__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Processing__c</fullName>
    <formula>IF( ISBLANK(Date_Change_From_Loan_Processing_to_UW__c),  TODAY() - Date_Stage_Changed_To_UW__c, Date_Change_From_Loan_Processing_to_UW__c - Date_Stage_Changed_To_UW__c)</formula>
    <label>Days in Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>