force-app/main/default/objects/Opportunity/fields/Days_In_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Underwriting__c</fullName>
    <description>Days in &quot;Underwriting&quot; and &quot;Approved by Committee&quot; minus days in UW Hold</description>
    <formula>IF(ISNULL(Date_Stage_Changed_To_UW_Hold__c) &amp;&amp; NOT(ISPICKVAL(Type, &apos;Bridge Loan&apos;)) &amp;&amp; NOT(ISPICKVAL(Type, &apos;SAB Loan&apos;)),
IF(IsClosed,
CloseDate - Date_Stage_Changed_To_UW__c - Days_In_UW_Hold_Total__c,
TODAY() - Date_Stage_Changed_To_UW__c - Days_In_UW_Hold_Total__c
),
IF(ISNULL(Date_Stage_Changed_To_UW_Hold__c) &amp;&amp; NOT(ISPICKVAL(Type, &apos;Term Loan&apos;)) &amp;&amp; NOT(ISPICKVAL(Type, &apos;Single Rental Loan&apos;))
, IF(IsClosed,
CloseDate - Date_Change_From_Loan_Processing_to_UW__c - Days_In_UW_Hold_Total__c,
TODAY() - Date_Change_From_Loan_Processing_to_UW__c - Days_In_UW_Hold_Total__c

),
Date_Stage_Changed_To_UW_Hold__c - Date_Stage_Changed_To_UW__c - Days_In_UW_Hold_Total__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days in &quot;Underwriting&quot; and &quot;Approved by Committee&quot; minus days in UW Hold</inlineHelpText>
    <label>Days In Underwriting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>