force-app/main/default/objects/Opportunity/fields/Days_In_Underwriting_Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Underwriting_Kickoff__c</fullName>
    <formula>IF(IsClosed, CloseDate - Kickoff_Date__c,TODAY() - Kickoff_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days in Underwriting since kickoff</inlineHelpText>
    <label>Days In Underwriting Since Kickoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>