force-app/main/default/objects/Opportunity/fields/Days_In_UW_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_In_UW_Hold__c</fullName>
    <formula>IF(ISNULL(Date_Stage_Changed_To_UW_Hold__c), 0, TODAY() - Date_Stage_Changed_To_UW_Hold__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In UW Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>