force-app/main/default/objects/Opportunity/fields/Days_In_UW_Hold_Total__c.field-meta.xml
<CustomField>
    <fullName>Days_In_UW_Hold_Total__c</fullName>
    <label>Days In UW Hold Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>