force-app/main/default/objects/Opportunity/fields/Days_Since_Term_Sheet_Issued__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Term_Sheet_Issued__c</fullName>
    <formula>IF(ISBLANK( Term_Sheet_Signed__c  ), TODAY() - Term_Sheet_Issued__c, Term_Sheet_Signed__c - Term_Sheet_Issued__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of days between Term Sheet Issued and Term Sheet Signed</inlineHelpText>
    <label>Days Since Term-Sheet Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>