force-app/main/default/objects/Opportunity/fields/DaysSinceKickOff__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceKickOff__c</fullName>
    <formula>IF(ISPICKVAL(StageName, &apos;Closed Won&apos;), CloseDate - Kickoff_Date__c,TODAY() - Kickoff_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Kick Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>