force-app/main/default/objects/Opportunity/fields/Deal_Cloned__c.field-meta.xml
<CustomField>
    <fullName>Deal_Cloned__c</fullName>
    <description>The Deal used when cloning a Deal</description>
    <inlineHelpText>This was the Deal used when cloned</inlineHelpText>
    <label>Deal Cloned</label>
    <length>10</length>
    <type>Text</type>
</CustomField>