force-app/main/default/objects/Opportunity/fields/Deal_Code__c.field-meta.xml
<CustomField>
    <fullName>Deal_Code__c</fullName>
    <description>If this Deal is from Open Close, then this is the Open Close Loan Number.  If this is a purchased loan, then this is the originating Lender&apos;s Loan Number</description>
    <externalId>true</externalId>
    <inlineHelpText>If this Deal is from Open Close, then this is the Open Close Loan Number.  If this is a purchased loan, then this is the originating Lender&apos;s Loan Number</inlineHelpText>
    <label>External Deal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>