force-app/main/default/objects/Opportunity/fields/Deal_Field_History__c.field-meta.xml
<CustomField>
    <fullName>Deal_Field_History__c</fullName>
    <label>Onboarding Dates History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>