force-app/main/default/objects/Opportunity/fields/Deal_Intro_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Intro_Source__c</fullName>
    <description>This is the introduction source at the deal if it is different from the original intro source</description>
    <inlineHelpText>Enter the introduction Source of the deal</inlineHelpText>
    <label>Deal Intro Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Hotline</fullName>
            </value>
            <value>
                <fullName>Imported List</fullName>
            </value>
            <value>
                <fullName>Non-Database</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>