force-app/main/default/objects/Opportunity/fields/Deal_Intro_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Intro_Sub_Source__c</fullName>
    <label>Deal Intro Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deal_Intro_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>5Arch</fullName>
                <label>5arch</label>
            </value>
            <value>
                <fullName>AAPL</fullName>
            </value>
            <value>
                <fullName>ABS East</fullName>
            </value>
            <value>
                <fullName>ABS West</fullName>
            </value>
            <value>
                <fullName>ACOF</fullName>
            </value>
            <value>
                <fullName>ADC Roadshow</fullName>
            </value>
            <value>
                <fullName>Americatalyst</fullName>
            </value>
            <value>
                <fullName>Answering Service</fullName>
            </value>
            <value>
                <fullName>Anthony Elgort Sourced</fullName>
            </value>
            <value>
                <fullName>Asset Based Lending</fullName>
            </value>
            <value>
                <fullName>BiggerPockets</fullName>
            </value>
            <value>
                <fullName>BiggerPockets Conference</fullName>
            </value>
            <value>
                <fullName>Boris Zhuravel Sourced</fullName>
            </value>
            <value>
                <fullName>Brad Chmura Sourced</fullName>
            </value>
            <value>
                <fullName>Brady Regier Sourced</fullName>
            </value>
            <value>
                <fullName>Brandon Turk Sourced</fullName>
            </value>
            <value>
                <fullName>Brendan Hamilton Sourced</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broker+</fullName>
            </value>
            <value>
                <fullName>California Mortgage Expo</fullName>
            </value>
            <value>
                <fullName>California Realtors Expo</fullName>
            </value>
            <value>
                <fullName>CAMP</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Churchill Real Estate</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Collective Genius</fullName>
            </value>
            <value>
                <fullName>Colony AF</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>CoreVest MSA</fullName>
            </value>
            <value>
                <fullName>Correspondent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>